--- a/app/partials/test.html
+++ b/app/partials/test.html
@@ -7,9 +7,9 @@
 			<h1>second half</h1>
 		</div>
 		<div class="hide_l row_m_6 row_s_6">
-			<h1>third half</h1>
+			<h1>thirds halfs</h1>
 		</div>
-		<div class="hide_l hide_m show_s row_s_3">
+		<div class="hide_l hide_m show_only_s row_s_3">
 			<h1>fourth half</h1>
 		</div>
 	</div>
@@ -34,17 +34,17 @@
 
 <div class="container">
 	<div class="row">
-		<div class="row_l_1_push row_m_6_push row_s_9_push">
+		<div class="row_l_1_push row_m_6_push row_s_3_push">
 			<h1>TEST of partials goes here</h1>
 		</div>
-				<div class="row_l_1_push row_m_6_push row_s_9_push">
+				<div class="row_l_1_push row_m_6_push row_s_3_push">
 			<h1>second half</h1>
 		</div>
-<!-- 		<div class="hide_l row_m_6 hide_s">
+		<div class="hide_l row_m_6 hide_s">
 			<h1>third half</h1>
 		</div>
 		<div class="hide_l row_m_6 hide_s">
 			<h1>fourth half</h1>
-		</div> -->
+		</div>
 	</div>
 </div>
