--- a/app/scss/helpers.scss
+++ b/app/scss/helpers.scss
@@ -1,7 +1,19 @@
 /* screen sizes - colors left in there for testing purposes */
-$xlargescreen: "only screen and (min-width: 1500px)"; //yellow
-$largescreen: "only screen and (min-width: 993px)"; //purple
-$mediumscreen: "only screen and (max-width: 992px)";	//green
+$xlargescreen: "only screen and (min-width: 1150px)"; //yellow
+$largescreen: "only screen and (min-width: 993px) and (max-width: 1149px)"; //purple
+$mediumscreen: "only screen and (min-width: 769px) and (max-width: 992px)";	//green
 $smallscreen: "only screen and (max-width: 768px)";	//blue
 $xsmallscreen: "only screen and (max-width: 530px)";	//orange
 $xxsmallscreen: "only screen and (max-width: 400px)";	//red
+
+/* colors */
+$gray: #f6f6f6;
+$black: #2c2c2c;
+$white: #ffffff;
+$line-color: #dfdfdf;
+$dark-blue: #587898;
+$light-blue: #73abe4;
+$menu-blue: #507aa5;
+$hover-blue: #466a90;
+$small-blue: #5b86b3;
+
