starting content section, updates to navbar, favicon

--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -2,28 +2,28 @@
 	<nav id="navdropdown">
 		<div class="hide-s hamburger-height">
 			<ul class="hide-s row-l-12 row-s-1-push centered-nav">
-				<li class="dropdown"><a href="/web-design/index.html">Web&nbsp;Design</a><div class="arrow-down"></div>
+				<li class="dropdown"><a href="/web-design/index.html" class="dropdown-corner">Web&nbsp;Design</a><div class="arrow-down"></div>
 					<div class="dropdown-content">
 						<a href="/design/lorem-ipsum.html">Lorem Ipsum</a><div class="arrow-right"></div>
 						<a href="/design/dolor-sit.html">Dolor Sit</a><div class="arrow-right"></div>
 						<a href="/design/Elit">Elit</a><div class="arrow-right"></div>
 					</div>
 				</li>
-				<li class="dropdown"><a href="/gui/index.html">GUI</a><div class="arrow-down"></div>
+				<li class="dropdown"><a href="/gui/index.html" class="dropdown-corner">GUI</a><div class="arrow-down"></div>
 					<div class="dropdown-content">
 						<a href="/gui/lorem-ipsum.html">Lorem Ipsum</a><div class="arrow-right"></div>
 						<a href="/gui/dolor-sit.html">Dolor Sit</a><div class="arrow-right"></div>
 						<a href="/gui/elit.html">Elit</a><div class="arrow-right"></div>
 					</div>
 				</li>
-				<li class="dropdown"><a href="/mobile-dev/index.html">Mobile&nbsp;Dev</a><div class="arrow-down"></div>
+				<li class="dropdown"><a href="/mobile-dev/index.html" class="dropdown-corner">Mobile&nbsp;Dev</a><div class="arrow-down"></div>
 					<div class="dropdown-content">
 						<a href="/mobile-dev/lorem-ipsum.html">Lorem Ipsum</a><div class="arrow-right"></div>
 						<a href="/mobile-dev/dolor-sit.html">Dolor Sit</a><div class="arrow-right"></div>
 						<a href="/mobile-dev/elit.html">Elit</a><div class="arrow-right"></div>
 					</div>
 				</li>
-				<li class="dropdown"><a href="/graphic-design/index.html">Graphic&nbsp;Design</a><div class="arrow-down"></div>
+				<li class="dropdown"><a href="/graphic-design/index.html" class="dropdown-corner">Graphic&nbsp;Design</a><div class="arrow-down"></div>
 					<div class="dropdown-content">
 						<a href="/graphic-design/fireworks.html">Fireworks</a><div class="arrow-right"></div>
 						<a href="/graphic-design/flash.html">Flash</a><div class="arrow-right"></div>
@@ -33,31 +33,31 @@
 						<a href="/graphic-design/photoshop.html">Photoshop</a><div class="arrow-right"></div>
 						<a href="/graphic-design/typography.html">Typography</a><div class="arrow-right"></div>
 						<a href="/graphic-design/vector-resources.html">Vector Resources</a><div class="arrow-right"></div>
-						<a href="/graphic-design/graphic-design-archive.html">Graphic Design Archive</a><div class="arrow-right"></div>
+						<a href="/graphic-design/graphic-design-archive.html" class="dropdown-corner">Graphic Design Archive</a><div class="arrow-right"></div>
 					</div>
 				</li>
-				<li class="dropdown"><a href="/freelance/index.html">Freelance</a><div class="arrow-down"></div>
+				<li class="dropdown"><a href="/freelance/index.html" class="dropdown-corner">Freelance</a><div class="arrow-down"></div>
 					<div class="dropdown-content">
 						<a href="/freelance/lorem-ipsum.html">Lorem Ipsum</a><div class="arrow-right"></div>
 						<a href="/freelance/dolor-sit.html">Dolor Sit</a><div class="arrow-right"></div>
 						<a href="/freelance/elit.html">Elit</a><div class="arrow-right"></div>
 					</div>
 				</li>
-				<li class="dropdown"><a href="/resources/index.html">Resources</a><div class="arrow-down"></div>
+				<li class="dropdown"><a href="/resources/index.html" class="dropdown-corner">Resources</a><div class="arrow-down"></div>
 					<div class="dropdown-content">
 						<a href="/resources/lorem-ipsum.html">Lorem Ipsum</a><div class="arrow-right"></div>
 						<a href="/resources/dolor-sit.html">Dolor Sit</a><div class="arrow-right"></div>
 						<a href="/resources/elit.html">Elit</a><div class="arrow-right"></div>
 					</div>
 				</li>
-				<li class="dropdown"><a href="/inspiration/index.html">Inspiration</a><div class="arrow-down"></div>
+				<li class="dropdown"><a href="/inspiration/index.html" class="dropdown-corner">Inspiration</a><div class="arrow-down"></div>
 					<div class="dropdown-content">
 						<a href="/inspiration/lorem-ipsum.html">Lorem Ipsum</a><div class="arrow-right"></div>
 						<a href="/inspiration/dolor-sit.html">Dolor Sit</a><div class="arrow-right"></div>
 						<a href="/inspiration/elit.html">Elit</a><div class="arrow-right"></div>
 					</div>
 				</li>
-				<li class="dropdown"><div class="hide-xl show-l show-m"><a href="#" class>search</a><div class="arrow-down"></div></div>
+				<li class="dropdown"><div class="hide-xl show-l show-m"><a href="#" class="dropdown-corner">search</a><div class="arrow-down"></div></div>
 					<div class="dropdown-content dropdown-content-search">
 						<div id="tfheader">
 							<form id="tfnewsearch" method="get" action="http://www.google.com">
@@ -97,10 +97,7 @@
 			</ul>
 		</div>
 	</nav>
+	<div class="hide-s">
+		<hr>
+	</div>
 </section><!-- end of navbar-section -->
-
-
-
-
-	
-
