--- a/app/scss/grid.scss
+++ b/app/scss/grid.scss
@@ -12,10 +12,13 @@
 	clear:both;
 }
 
-/* Grid System built from scss/grid.scss */
+// Grid System built from scss/grid.scss
 $columns: 12;
 $list: xl l m l sx xxs;
 
+// Xlarge screen grid generator
+// this creates the 12 column grid
+// what I love about scss is that we get to nicely use statements!
 @media #{$xlargescreen} {
 	@for $i from 1 through $columns {
 		.row-xl-#{$i} {
@@ -23,6 +26,7 @@ $list: xl l m l sx xxs;
 			float: left;
 		}
 	}
+// this lets me push
 	@for $i from 0 through $columns {
 		.row-xl-#{12 - $i}-push {
 			left: percentage(1 - ($i/12));
@@ -30,19 +34,23 @@ $list: xl l m l sx xxs;
 			position: relative;
 		}
 	}
+// for hiding in various screen sizes
 	@each $size in $list {
 		.hide-#{$size} {
 			display: none;
 		}
 	}
+// override to show
 	.show-xl {
 		display: inline-block !important;
 	}
+// show only in small 
 	.show-only-s {
 		display: none;
 	}
 }
 
+// Large Screen generator
 @media #{$largescreen} {
 	@for $i from 1 through $columns {
 		.row-l-#{$i} {
