--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -9,6 +9,7 @@ body {
 	}
 	font-family: Geneva, Tahoma, Verdana, sans-serif;
 	-webkit-font-smoothing: antialiased !important;
+
 }
 
 .body-container {
@@ -21,4 +22,5 @@ body {
 		margin: 0 auto;
 		border: 0;
 	}
+	height: 1000px;
 }
