fixes for navbar, starting content section

--- a/app/partials/content.html
+++ b/app/partials/content.html
@@ -1,39 +1,122 @@
 <section class="content-section">
 
-	<div class="row-s-12 row-m-8 row-l-8 row-xl-8">
+	<div class="row-s-12 row-m-8 row-l-8 row-xl-8 side-bar">
+
+		<!-- row 1 -->
 		<div class="row-s-12">
-			<div class="content">
-				<a href="#">
-					<p>LEFTimage1</p>
-					<p>Kicking off 2016 with these new hits</p>
-				</a>
+			<div class="row-xl-4 row-l-12">
+				<div class="row-xl-3-push">
+					<div class="content-image"></div>
+					<p class="text-block">Competition</p>
+				</div>
+			</div>
+			<div class="row-xl-7 row-l-12 right-content">
+				<div class="headline-space">
+					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+				</div>
+				<div class="hide-s">
+					<hr>
+				</div>
+				<div class="bar-space">
+					<p class="align-left">February 8, 2013</p>
+					<p class="align-right font-color">10 Comments and 22 Reactions</p>
+				</div>
+				<div class="hide-s">
+					<hr>
+				</div>
+				<div class="bar-space">
+					<p class="align-left arrow-space">Topics</p>
+					<div class="arrow arrow-right"></div>
+					<p class="align-left font-color">Competition</p>
+					<p class="align-right arrow-space">Author</p>
+					<div class="arrow arrow-left"></div>
+				</div>
+				<div class="hide-s">
+					<hr>
+				</div>
+				<div class="bar-space bar-space-bottom">
+					<h2>Lorem Ipsum dolor sit amet, consectetur adipiscing elit...</h2>
+				</div>
 			</div>
 		</div>
 
+		<div class="hide-s"><hr></div>
+
+		<!-- row 2 -->
 		<div class="row-s-12">
-			<div class="content">
-				<a href="#">
-					<p>LEFTimage2</p>
-					<p>Available later this season</p>
-				</a>
+			<div class="row-xl-4">
+				<div class="row-xl-3-push">
+					<div class="content-image"></div>
+					<p class="text-block">Mighty Deals</p>
+				</div>
+			</div>
+			<div class="row-xl-7 right-content">
+				<div class="headline-space">
+					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+				</div>
+				<div class="hide-s">
+					<hr>
+				</div>
+				<div class="bar-space">
+					<p class="align-left">February 7, 2013</p>
+					<p class="align-right font-color">No Comments and 52 Reactions</p>
+				</div>
+				<div class="hide-s">
+					<hr>
+				</div>
+				<div class="bar-space">
+					<p class="align-left arrow-space">Topics</p>
+					<div class="arrow arrow-right"></div>
+					<p class="align-left font-color">Sponsor</p>
+					<p class="align-right arrow-space">Author</p>
+					<div class="arrow arrow-left"></div>
+				</div>
+				<div class="hide-s">
+					<hr>
+				</div>
+				<div class="bar-space bar-space-bottom">
+					<h2>Lorem Ipsum dolor sit amet, consectetur adipiscing elit...</h2>
+				</div>
 			</div>
 		</div>
 
+		<div class="hide-s"><hr></div>
+		
+		<!-- row 3 -->
 		<div class="row-s-12">
-			<div class="content">
-				<a href="#">
-					<p>LEFTimage3</p>
-					<p>Rewind last year's best hits</p>
-				</a>
+			<div class="row-xl-4">
+				<div class="row-xl-3-push">
+					<div class="content-image"></div>
+					<p class="text-block">Twitter</p>
+				</div>
 			</div>
-		</div>
-
-		<div class="row-s-12">
-			<div class="content">
-				<a href="#">
-					<p>LEFTimage4</p>
-					<p>Hear some of the newest hits in 2016</p>
-				</a>
+			<div class="row-xl-7 right-content">
+				<div class="headline-space">
+					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+				</div>
+				<div class="hide-s">
+					<hr>
+				</div>
+				<div class="bar-space">
+					<p class="align-left">February 8, 2013</p>
+					<p class="align-right font-color">30 Comments and 29 Reactions</p>
+				</div>
+				<div class="hide-s">
+					<hr>
+				</div>
+				<div class="bar-space">
+					<p class="align-left arrow-space">Topics</p>
+					<div class="arrow arrow-right"></div>
+					<p class="align-left font-color">Outreach</p>
+					<p class="align-right arrow-space">Author</p>
+					<div class="arrow arrow-left"></div>
+				</div>
+				<div class="hide-s">
+					<hr>
+				</div>
+				<div class="bar-space bar-space-bottom">
+					<h2>Lorem Ipsum dolor sit amet, consectetur adipiscing elit...</h2>
+				</div>
 			</div>
 		</div>
 
@@ -42,33 +125,25 @@
 	<div class="hide-s row-m-4 row-l-4 row-xl-4">
 		<div class="row-s-12">
 			<div class="content">
-				<a href="#">
-					<p>RIGHTimage1</p>
-				</a>
+				<p>RIGHTimage1</p>
 			</div>
 		</div>
 
 		<div class="row-s-12">
 			<div class="content">
-				<a href="#">
-					<p>RIGHTimage2</p>
-				</a>
+				<p>RIGHTimage2</p>
 			</div>
 		</div>
 
 		<div class="row-s-12">
 			<div class="content">
-				<a href="#">
-					<p>RIGHTimage3</p>
-				</a>
+				<p>RIGHTimage3</p>
 			</div>
 		</div>
 
 		<div class="row-s-12">
 			<div class="content">
-				<a href="#">
-					<p>RIGHTimage4</p>
-				</a>
+				<p>RIGHTimage4</p>
 			</div>
 		</div>
 	</div>
