--- a/app/scss/helpers.scss
+++ b/app/scss/helpers.scss
@@ -21,4 +21,6 @@ $menu-blue: #507aa5;
 $hover-blue: #466a90;
 $small-blue: #5b86b3;
 $menu-background: rgba(0, 0, 0, 0.14);
-
+$box-border-color: #e5e5e5;
+$content-color: #587898;
+$content-text-color: #5a7a9b;
