--- a/app/scss/content.scss
+++ b/app/scss/content.scss
@@ -1,4 +1,132 @@
 @import "helpers";
 .content-section {
 
+	hr {
+		display: block;
+		position: relative;
+		padding: 0;
+		margin: 8px auto 50px auto;
+		height: 0;
+		width: 83%;
+		max-height: 0;
+		font-size: 1px;
+		line-height: 0;
+		clear: both;
+		border: none;
+		border-top: 1px solid $line-color;
+		/*border-bottom: 1px solid #ffffff;*/
+	}
+	h1 {
+		font-family: sans-serif; 
+		font-size: 27px;
+		color: $content-text-color;
+		font-weight: 600;
+		margin: 0 auto;
+		letter-spacing: 0.001em;
+	}
+	.side-bar {
+		margin-right: -1px;
+		border-right: 1px solid $line-color;
+	}
+	.content-image {
+		background-image: url(../images/content-image.png);
+		width: 134px;
+		height: 134px;
+		background-repeat: no-repeat;
+		background-position: center;
+		padding: 4px;
+		border: 1px solid $box-border-color;
+		position: relative;
+		@media #{$xlargescreen} {
+			margin: 0 0;
+		}
+		@media #{$largescreen} {
+			margin: 0 auto;
+		}
+	}
+	.text-block {
+		@media #{$xlargescreen} {
+			position: absolute;
+			top: 115px;
+			left: 5px;
+			width: 134px;
+		}
+		@media #{$largescreen} {
+			position: relative;
+			top: 0;
+			left: 0;
+			width: 240px;
+		}	
+		
+		height: 24px;
+		background-color: $content-color;
+		margin: 0 auto;
+		text-align: center;
+		font-size: 14px;
+		line-height: 24px;
+		color: $white;
+	}
+	.right-content {
+		hr {
+			width: 100%;
+			margin: 0 auto;
+		}
+		.headline-space {
+			margin-bottom: 16px;
+		}
+		.bar-space {
+			padding-top: 5px;
+    	padding-bottom: 20px;
+    	&.bar-space-bottom {
+    		padding-top: 13px;
+    	}
+			h2 {
+				font-size: 13px;
+				font-weight: 400;
+				color: $content-color;
+				margin: 0 auto;
+			}
+		}
+		p {
+			font-size: 11px;
+			margin: 0 auto;
+		}
+		.arrow {
+			background: url(../images/arrow-right.png) no-repeat;
+			background-size: 100% 100%;
+			height: 9px;
+			width: 9px;
+			position: absolute;
+			&.arrow-right {
+				margin: 3px 0 0 40px;
+			}
+			&.arrow-left {
+				margin: 3px 0 0 403px
+			}			
+		}
+		// .arrow-right {
+		// 	background: url(../images/arrow-right.png) no-repeat;
+		// 	background-size: 100% 100%;
+		// 	height: 9px;
+		// 	width: 9px;
+		// 	margin: 3px 0px 0 40px;
+  //   	position: absolute;
+		// }
+		.font-color {
+			font-weight: 400;
+			color: $content-color;
+		}
+		.align-right {
+			float: right;
+			&.arrow-space {
+				padding-right: 17px;
+			}
+		}
+		.align-left {
+			float: left;
+			&.arrow-space {
+				padding-right: 22px;
+			}
+		}
+	}
 }
