content section looks good, fixed navbar bug for search, other fixes for mobile & desktop

--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>ZapLabs Exercise</title>
-	<link rel="shortcut icon" href="../images/favicon-rebel.ico">
+	<link rel="shortcut icon" href="images/favicon-rebel.ico">
 	<meta name="description" content="ZapLabs Exercise">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--build:css css/styles.min.css-->
