--- a/app/partials/content.html
+++ b/app/partials/content.html
@@ -1,6 +1,6 @@
 <section class="content-section">
 
-	<div class="row-s-12 row-m-8 row-l-8 row-xl-8 side-bar">
+	<div class="row-s-12 row-m-12 row-l-8 row-xl-8 side-bar">
 
 		<!-- row 1 -->
 		<div class="row-s-12">
@@ -12,16 +12,16 @@
 			</div>
 			<div class="row-xl-7 row-l-12 right-content">
 				<div class="headline-space">
-					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing&nbsp;elit.</h1>
 				</div>
-				<div class="hide-s">
+				<div class="">
 					<hr>
 				</div>
 				<div class="bar-space">
 					<p class="align-left">February 8, 2013</p>
 					<p class="align-right font-color">10 Comments and 22 Reactions</p>
 				</div>
-				<div class="hide-s">
+				<div class="">
 					<hr>
 				</div>
 				<div class="bar-space">
@@ -31,7 +31,7 @@
 					<p class="align-right arrow-space">Author</p>
 					<div class="arrow arrow-left"></div>
 				</div>
-				<div class="hide-s">
+				<div class="">
 					<hr>
 				</div>
 				<div class="bar-space bar-space-bottom">
@@ -40,78 +40,78 @@
 			</div>
 		</div>
 
-		<div class="hide-s"><hr></div>
+		<div class=""><hr></div>
 
 		<!-- row 2 -->
 		<div class="row-s-12">
-			<div class="row-xl-4">
+			<div class="row-xl-4 row-l-12">
 				<div class="row-xl-3-push">
 					<div class="content-image"></div>
-					<p class="text-block">Mighty Deals</p>
+					<p class="text-block">Competition</p>
 				</div>
 			</div>
-			<div class="row-xl-7 right-content">
+			<div class="row-xl-7 row-l-12 right-content">
 				<div class="headline-space">
-					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing&nbsp;elit.</h1>
 				</div>
-				<div class="hide-s">
-					<hr>
-				</div>
-				<div class="bar-space">
-					<p class="align-left">February 7, 2013</p>
-					<p class="align-right font-color">No Comments and 52 Reactions</p>
-				</div>
-				<div class="hide-s">
-					<hr>
-				</div>
-				<div class="bar-space">
-					<p class="align-left arrow-space">Topics</p>
-					<div class="arrow arrow-right"></div>
-					<p class="align-left font-color">Sponsor</p>
-					<p class="align-right arrow-space">Author</p>
-					<div class="arrow arrow-left"></div>
-				</div>
-				<div class="hide-s">
-					<hr>
-				</div>
-				<div class="bar-space bar-space-bottom">
-					<h2>Lorem Ipsum dolor sit amet, consectetur adipiscing elit...</h2>
-				</div>
-			</div>
-		</div>
-
-		<div class="hide-s"><hr></div>
-		
-		<!-- row 3 -->
-		<div class="row-s-12">
-			<div class="row-xl-4">
-				<div class="row-xl-3-push">
-					<div class="content-image"></div>
-					<p class="text-block">Twitter</p>
-				</div>
-			</div>
-			<div class="row-xl-7 right-content">
-				<div class="headline-space">
-					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
-				</div>
-				<div class="hide-s">
+				<div class="">
 					<hr>
 				</div>
 				<div class="bar-space">
 					<p class="align-left">February 8, 2013</p>
-					<p class="align-right font-color">30 Comments and 29 Reactions</p>
+					<p class="align-right font-color">10 Comments and 22 Reactions</p>
 				</div>
-				<div class="hide-s">
+				<div class="">
 					<hr>
 				</div>
 				<div class="bar-space">
 					<p class="align-left arrow-space">Topics</p>
 					<div class="arrow arrow-right"></div>
-					<p class="align-left font-color">Outreach</p>
+					<p class="align-left font-color">Competition</p>
 					<p class="align-right arrow-space">Author</p>
 					<div class="arrow arrow-left"></div>
 				</div>
-				<div class="hide-s">
+				<div class="">
+					<hr>
+				</div>
+				<div class="bar-space bar-space-bottom">
+					<h2>Lorem Ipsum dolor sit amet, consectetur adipiscing elit...</h2>
+				</div>
+			</div>
+		</div>
+
+		<div class=""><hr></div>
+		
+		<!-- row 3 -->
+		<div class="row-s-12">
+			<div class="row-xl-4 row-l-12">
+				<div class="row-xl-3-push">
+					<div class="content-image"></div>
+					<p class="text-block">Competition</p>
+				</div>
+			</div>
+			<div class="row-xl-7 row-l-12 right-content">
+				<div class="headline-space">
+					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing&nbsp;elit.</h1>
+				</div>
+				<div class="">
+					<hr>
+				</div>
+				<div class="bar-space">
+					<p class="align-left">February 8, 2013</p>
+					<p class="align-right font-color">10 Comments and 22 Reactions</p>
+				</div>
+				<div class="">
+					<hr>
+				</div>
+				<div class="bar-space">
+					<p class="align-left arrow-space">Topics</p>
+					<div class="arrow arrow-right"></div>
+					<p class="align-left font-color">Competition</p>
+					<p class="align-right arrow-space">Author</p>
+					<div class="arrow arrow-left"></div>
+				</div>
+				<div class="">
 					<hr>
 				</div>
 				<div class="bar-space bar-space-bottom">
@@ -122,30 +122,36 @@
 
 	</div>
 
-	<div class="hide-s row-m-4 row-l-4 row-xl-4">
+	<div class=" hide-l hide-xl show-m show-s"><hr></div>
+
+	<div class=" row-m-12 row-l-4 row-xl-4">
 		<div class="row-s-12">
-			<div class="content">
-				<p>RIGHTimage1</p>
-			</div>
+			<div class="placer-image-a"></div>
 		</div>
 
 		<div class="row-s-12">
-			<div class="content">
-				<p>RIGHTimage2</p>
-			</div>
+			<div class="placer-image-b"></div>
 		</div>
 
-		<div class="row-s-12">
-			<div class="content">
-				<p>RIGHTimage3</p>
-			</div>
+		<div class="row-s-12 show-xl hide-m">
+			<div class="placer-image-a"></div>
 		</div>
 
-		<div class="row-s-12">
-			<div class="content">
-				<p>RIGHTimage4</p>
-			</div>
+		<div class="row-s-12 hide-xl show-l hide-m">
+			<div class="placer-image-a"></div>
 		</div>
+
+		<div class="row-s-12 hide-xl show-l hide-m">
+			<div class="placer-image-b"></div>
+		</div>
+		<div class="row-s-12 hide-xl show-l hide-m">
+			<div class="placer-image-a"></div>
+		</div>
+
+		<div class="row-s-12 hide-xl show-l hide-m">
+			<div class="placer-image-b"></div>
+		</div>
+
 	</div>
 
 
