--- a/app/scss/navbar.scss
+++ b/app/scss/navbar.scss
@@ -9,6 +9,7 @@
 			top: 0;
 			right: 0;
 			left: 0;
+			z-index: 1;
 		}
 	}
 	nav > div {
@@ -93,7 +94,7 @@
 			padding: 10px 32px 10px 8px;
 			}
 			@media #{$mediumscreen} {
-				padding: 10px 16px 10px 6px;
+				padding: 10px 15px 10px 6px;
 				// padding: 10px 15% 10px 15%;
 			}
 			@media #{$smallscreen} {
@@ -186,11 +187,14 @@
 				}
 			}
 			&.dropdown-content-search {
-				background-color: transparent;
 				-webkit-box-shadow: none;
 				-moz-box-shadow: none;
 				box-shadow: none;
 				margin-left:-204px;
+				margin-left: -222px;
+				background-color: #507aa5;
+				width: 308px;
+				height: 47px;
 			}
 		}
 
@@ -222,7 +226,7 @@
 			}
 			@media #{$mediumscreen} {
 				margin-top: -25px;
-				margin-right: 6px;
+				margin-right: 3px;
 			}
 		}
 		.arrow-right {
