fixes to nav and content, footer done. More testing and deployment

--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/navbar.css">
 	<link rel="stylesheet" href="css/grid.css">
 	<link rel="stylesheet" href="css/content.css">
+	<link rel="stylesheet" href="css/footer.css">
 	<!--endbuild-->
 	<!--build:js js/main.min.js-->
 	<!-- the js below will be minified into main.min.js 
@@ -32,6 +33,7 @@
 		accomlished using fileinclude (checout gulpfile.js) -->
 		@@include("./navbar.html")
 		@@include("./content.html")
+		@@include("./footer.html")
 		<!-- @@include("./test.html") -->
 	</div>
 </body>
