--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -59,8 +59,8 @@
 				</li>
 				<li class="dropdown"><div class="hide-xl show-l show-m"><a href="#" class="dropdown-corner">search</a><div class="arrow-down"></div></div>
 					<div class="dropdown-content dropdown-content-search">
-						<div id="tfheader">
-							<form id="tfnewsearch" method="get" action="http://www.google.com">
+						<div id="tfheader-m">
+							<form id="tfnewsearch-m" method="get" action="http://www.google.com">
 								<input type="text" class="tftextinput" name="q" size="21" maxlength="120" placeholder="Search here..."><input type="submit" value="Search" class="tfbutton">
 							</form>
 							<div class="tfclear"></div>
@@ -81,11 +81,11 @@
 		</div>
 		<div id="nav-height" class="show-only-s">
 			<ul id="hamburger_toggle" onclick="hide('hamburger_toggle'), show('dropdown', 'navdropdown')" class="row-s-12">
-				<div class="row-s-1-push"><li class="hamburger"></li></div>
+				<li class="row-s-1-push hamburger"></li>
 				<li class="search-icon"><a href="search.html" title="search icon"></a></li>
 			</ul>
 			<ul id="dropdown" onclick="hide('dropdown'), show('hamburger_toggle')" class="row-s-12">
-				<div class="row-s-1-push"><li class="dropdown-mark"><a></a></li></div>
+				<li class="row-s-1-push dropdown-mark"><a></a></li>
 				<li class="menu-drop"><a href="/webdesign/index.html">Web&nbsp;Design</a></li>
 				<li class="menu-drop"><a href="/gui/index.html">GUI</a></li>
 				<li class="menu-drop"><a href="/gui/index.html">Mobile&nbsp;Dev</a></li>
