--- a/app/scss/navbar.scss
+++ b/app/scss/navbar.scss
@@ -333,7 +333,9 @@
 		#tfheader {
 			margin-top: 9px;
 		}
-
+		#tfheader-m {
+			margin-top: 9px;
+		}
 		.search-position {
 			@media #{$xlargescreen} {
 				margin-left: 25px;
