--- a/app/partials/content.html
+++ b/app/partials/content.html
@@ -6,7 +6,7 @@
 		<div class="row-s-12">
 			<div class="row-xl-4 row-l-12">
 				<div class="row-xl-3-push">
-					<div class="content-image"></div>
+					<div class="content-image" title="content image 1"></div>
 					<p class="text-block">Competition</p>
 				</div>
 			</div>
@@ -46,8 +46,8 @@
 		<div class="row-s-12">
 			<div class="row-xl-4 row-l-12">
 				<div class="row-xl-3-push">
-					<div class="content-image"></div>
-					<p class="text-block">Competition</p>
+					<div class="content-image" title="content image 2"></div>
+					<p class="text-block">Mighty Deals</p>
 				</div>
 			</div>
 			<div class="row-xl-7 row-l-12 right-content">
@@ -58,8 +58,8 @@
 					<hr>
 				</div>
 				<div class="bar-space">
-					<p class="align-left">February 8, 2013</p>
-					<p class="align-right font-color">10 Comments and 22 Reactions</p>
+					<p class="align-left">February 7, 2013</p>
+					<p class="align-right font-color">No Comments and 52 Reactions</p>
 				</div>
 				<div class="">
 					<hr>
@@ -67,7 +67,7 @@
 				<div class="bar-space">
 					<p class="align-left arrow-space">Topics</p>
 					<div class="arrow arrow-right"></div>
-					<p class="align-left font-color">Competition</p>
+					<p class="align-left font-color">Sponsor</p>
 					<p class="align-right arrow-space">Author</p>
 					<div class="arrow arrow-left"></div>
 				</div>
@@ -86,8 +86,8 @@
 		<div class="row-s-12">
 			<div class="row-xl-4 row-l-12">
 				<div class="row-xl-3-push">
-					<div class="content-image"></div>
-					<p class="text-block">Competition</p>
+					<div class="content-image" title="content image 3"></div>
+					<p class="text-block">Twitter</p>
 				</div>
 			</div>
 			<div class="row-xl-7 row-l-12 right-content">
@@ -99,7 +99,7 @@
 				</div>
 				<div class="bar-space">
 					<p class="align-left">February 8, 2013</p>
-					<p class="align-right font-color">10 Comments and 22 Reactions</p>
+					<p class="align-right font-color">34 Comments and 19 Reactions</p>
 				</div>
 				<div class="">
 					<hr>
@@ -107,7 +107,7 @@
 				<div class="bar-space">
 					<p class="align-left arrow-space">Topics</p>
 					<div class="arrow arrow-right"></div>
-					<p class="align-left font-color">Competition</p>
+					<p class="align-left font-color">Communication</p>
 					<p class="align-right arrow-space">Author</p>
 					<div class="arrow arrow-left"></div>
 				</div>
@@ -126,30 +126,30 @@
 
 	<div class=" row-m-12 row-l-4 row-xl-4">
 		<div class="row-s-12">
-			<div class="placer-image-a"></div>
+			<div class="placer-image-a" title="a placer image, a"></div>
 		</div>
 
 		<div class="row-s-12">
-			<div class="placer-image-b"></div>
+			<div class="placer-image-b" title="a placer image, b"></div>
 		</div>
 
 		<div class="row-s-12 show-xl hide-m">
-			<div class="placer-image-a"></div>
+			<div class="placer-image-a" title="a placer image, a"></div>
 		</div>
 
 		<div class="row-s-12 hide-xl show-l hide-m">
-			<div class="placer-image-a"></div>
+			<div class="placer-image-a" title="a placer image, a"></div>
 		</div>
 
 		<div class="row-s-12 hide-xl show-l hide-m">
-			<div class="placer-image-b"></div>
+			<div class="placer-image-b" title="a placer image, b"></div>
 		</div>
 		<div class="row-s-12 hide-xl show-l hide-m">
-			<div class="placer-image-a"></div>
+			<div class="placer-image-a" title="a placer image, a"></div>
 		</div>
 
 		<div class="row-s-12 hide-xl show-l hide-m">
-			<div class="placer-image-b"></div>
+			<div class="placer-image-b" title="a placer image, b"></div>
 		</div>
 
 	</div>
