IE win8 & win10 fixes, bug for FF 47

--- a/app/partials/content.html
+++ b/app/partials/content.html
@@ -124,6 +124,7 @@
 
 	<div class=" hide-l hide-xl show-m show-s"><hr></div>
 
+	<!-- right or bottom images -->
 	<div class=" row-m-12 row-l-4 row-xl-4">
 		<div class="row-s-12">
 			<div class="placer-image-a" title="a placer image, a"></div>
