--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,6 +1,5 @@
 <footer>
 	<div class="row-s-12 row-m-12 row-l-8 row-xl-8">
-		<p>Made by <a href="http://www.tejas-mehta.com">Tejas Mehta</a> | <a href="https://github.com/tmehta2442/zaplabsproject">GitHub Code</a> | For<a href="https://zaplabs.com/">&ensp;ZapLabs</a></p>
-
+		<p>Made by <a href="http://www.tejas-mehta.com">Tejas Mehta</a> | <a href="https://github.com/tmehta2442/zaplabsproject">GitHub Code</a> | <span class="nowrap">For <a href="https://zaplabs.com/">ZapLabs</a></span></p>
 	</div>
-</footer>
+</footer><!-- end of footer section -->
