--- a/app/partials/test.html
+++ b/app/partials/test.html
@@ -1,3 +1,4 @@
+<!-- just keeping this here as I use it for a sandbox -->
 <div class="container">
 	<div class="row">
 		<div class="row_l_6 row_m_3 row_s_12">
