--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -17,7 +17,10 @@ footer {
 	@media #{$smallscreen} {
 		p {
 			text-align: center;
-
+			margin: auto 5%
 		}
+	}
+	span {
+		white-space: nowrap;
 	}
 }
