--- a/app/scss/navbar.scss
+++ b/app/scss/navbar.scss
@@ -95,7 +95,6 @@
 			}
 			@media #{$mediumscreen} {
 				padding: 10px 15px 10px 6px;
-				// padding: 10px 15% 10px 15%;
 			}
 			@media #{$smallscreen} {
 				padding: 0;
@@ -111,7 +110,6 @@
 				text-decoration: none;
 			}
 			&:hover {
-				//ackground-color: $menu-blue;
 				color: $white;
 				a {
 					background-color: $menu-blue;
@@ -122,21 +120,8 @@
 				}
 			}
 		}
-		// .dropbtn {
-		// 	display: inline-block;
-		// 	color: $white;
-		// 	text-align: center;
-		// 	padding: 14px 16px;
-		// 	text-decoration: none;
-		// }
 		.dropdown {
 			&:hover {
-				// .dropbtn {
-				// 	background-color: $menu-blue;
-				// 	color: $white;
-				// 	padding-top: 0px;
-
-				// }
 				.dropdown-content {
 					display: block;
 					z-index: 1;
@@ -162,7 +147,7 @@
 		.dropdown-content {
 			display: none;
 			position: absolute;
-			background-color: $menu-background;
+			background-color: $menu-background-fix;
 			min-width: 150px;
 			box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 			a {
@@ -392,6 +377,5 @@
 		clear: both;
 		border: none;
 		border-top: 1px solid $line-color;
-		/*border-bottom: 1px solid #ffffff;*/
 	}
 }
